--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,10 @@
     "scripts": {
         "psalm": "vendor/bin/psalm",
         "test": "./vendor/bin/testbench package:test --parallel --no-coverage",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "post-root-package-install": [
+            "@php artisan vendor:publish --provider=\"JustSteveKing\\Laravel\\ERP\\CRM\\CRMServiceProvider\" --tag=\"laravel-erp-crm-migrations\""
+        ]
     },
     "config": {
         "sort-packages": true
