--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "psalm": "vendor/bin/psalm",
         "test": "./vendor/bin/testbench package:test --parallel --no-coverage",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
-        "post-root-package-install": [
+        "post-install-cmd": [
             "@php artisan vendor:publish --provider=\"JustSteveKing\\Laravel\\ERP\\CRM\\CRMServiceProvider\" --tag=\"laravel-erp-crm-migrations\""
         ]
     },
